@@ -1,5 +1,9 @@
 2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>
 
+	* setup.py, tests/sybase_dbapi20.py, tests/test_sybase_dbapi20.py:
+	Added python-sybase specific tests to dbapi20 and a test runner
+	for python-sybase with and without auto_commit
+
 	* tests/dbapi20.py: Extended dbapi20 driver compliance unit test
 	suite in order to permit testing drivers without auto-commit
 
